update-github link

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "homepage": "https://b3log.org/sym",
   "repository": {
     "type": "git",
-    "url": "git://github.com/88250/symphony.git"
+    "url": "git://github.com/geosmart/symphony.git"
   },
   "bugs": {
-    "url": "https://github.com/88250/symphony/issues"
+    "url": "https://github.com/geosmart/symphony/issues"
   },
   "license": "AGPLv3",
   "private": true,
